<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <Button
        android:id="@+id/buttonCompartir"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="58dp"
        android:text="@string/Compartir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonAnadir"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/añadir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/buttonBorrar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/Borrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAnadir" />

    <Button
        android:id="@+id/buttonModificar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/Modificar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBorrar" />

    <Button
        android:id="@+id/buttonAprender"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Aprender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonModificar" />

    <Button
        android:id="@+id/buttonSonido"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/Act_Desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAprender" />

    <Button
        android:id="@+id/buttonVLogros"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/VLogros"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSonido" />

    <Button
        android:id="@+id/buttonBLogros"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:text="@string/BLogros"
        app:layout_constraintBottom_toTopOf="@+id/buttonCompartir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text="MENU"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>